--- a/docker/hello-world-server.1.0/Dockerfile
+++ b/docker/hello-world-server.1.0/Dockerfile
@@ -7,6 +7,8 @@ COPY proxy .
 
 EXPOSE 8080
 
-ENV PROXY_SERVICE_IP=127.0.0.1
+ENV PROXY_IP=127.0.0.1
+# ENV PROXY_PORT=8080
+ENV SERVICE_PORT=4201
 
-CMD ./proxy hello-world-server $PROXY_SERVICE_IP:8080 > proxy.log & sleep 5 && ./helloworldserver > server.log
+CMD ./proxy $SERVICE_PORT hello-world-server $PROXY_IP:8080 > proxy.log & sleep 5 && ./helloworldserver > server.log
