--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 # ignore binaries
+calculator/calc-client/calc-client
+calculator/calc-server/calc-server
 helloworld/helloworldserver/helloworldserver
 helloworld/helloworldclient/helloworldclient
