Aggregator service for slicing data into format for predictor model. Make sensors send data with a unique (random really) id.

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ covid19-tracker/covid19-db/covid19-db
 covid19-tracker/covid19-db/*.csv
 covid19-tracker/covid19-webserver/covid19-webserver
 
+cpu-usage/aggregator/aggregator
 cpu-usage/sensor/sensor
 cpu-usage/stress-cpu/stress-cpu
 
