Python flask microservice for training model to predict cpu usage. Currently just uses a dummy prediction of taking the average.

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ covid19-tracker/covid19-db/*.csv
 covid19-tracker/covid19-webserver/covid19-webserver
 
 cpu-usage/aggregator/aggregator
+cpu-usage/predictor/__pycache__
+cpu-usage/predictor/venv
 cpu-usage/sensor/sensor
 cpu-usage/stress-cpu/stress-cpu
 
