--- a/cpu-usage/predictor/requirements.txt
+++ b/cpu-usage/predictor/requirements.txt
@@ -1,7 +1,9 @@
 click==7.1.2
 Flask==1.1.2
+future==0.18.2
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
-pkg-resources==0.0.0
+numpy==1.19.2
+torch==1.6.0
 Werkzeug==1.0.1
